Add inline CSS style for button element

--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -19,6 +19,6 @@
   <body>
     <div class="ext">Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button style="background-color: rgb(252, 190, 56); border-color: rgb(189, 188, 188);border-width: 0.05px;font-size: 10px;">Inline Method</button>
   </body>
 </html>
